--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     d="M4.553 7.776c.82-1.641 1.717-2.753 2.093-3.13l.708.708c-.29.29-1.128 1.311-1.907 2.87z" />
             </svg>
             <div class="resultdes">
-                <span>    raitement anti tâches</span>
+                <span>Traitement anti tâches</span>
                 <span>Elimination des tâches</span>
                 <span> D'origine végétale</span>
                 <span> D'origine organique</span>
