--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.ico">
     <title>SOCIETE INTACT HOME</title>
     <meta name="description" content="INTACTHOME">
     <link rel="stylesheet" href="style.css">
@@ -113,7 +114,7 @@
          <section class="services">
             <ul id="canapé">
                 <li>
-                  <img src="sofa.jpg"></img>
+                  <img src="sofa.jpg" alt="sofa"  ></img>
                 </li>
                 <li>
                   <ul>
@@ -137,9 +138,9 @@
                   </ul>
                 </li>
               </ul>
-              <ul>
+              <ul id="matelas">
                 <li>
-                  <ul id="matelas">
+                  <ul >
                     <li>Nettoyage et entretien de Matelas</li>
                     <li>
                       Une tâche sur votre matelas? Appelez nous au plus vite pour
@@ -157,15 +158,15 @@
                   </ul>
                 </li>
                 <li>
-                  <img src="nettoyage matelas.png"></img>
+                  <img src="nettoyage matelas.png" alt="matelas"></img>
                 </li>
               </ul>
-              <ul>
+              <ul id="moquette">
                 <li>
-                  <img src="moquette.jpeg"></img>
+                  <img src="moquette.jpeg" alt="moquette"></img>
                 </li>
                 <li>
-                  <ul id="moquette">
+                  <ul >
                     <li>Nettoyage de Moquettes</li>
                     <li>
                       Les moquettes se nettoient bien à condition de les entretenir
@@ -193,7 +194,7 @@
         <ul>
           <li>
             <div class="contact">Contact</div>
-            <div class="phone">
+            <div class="phonef">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -241,7 +242,7 @@
         </ul>
         <ul>
           <li>
-            <img src="INTACTHOMEwhiteLogo.png" />
+            <img src="INTACTHOMEwhiteLogo.png" alt="logo" />
             <div class="description">
         
               Votre partenaire du nettoyage à domicile dans toute la TUNISIE
