--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         </ul>
         
       </footer>
-      <div class="droits">Created By INTACT HOME © Tous droits réservés </div>
+      <div class="droits"><small> Created By INTACT HOME © Tous droits réservés 2024</small></div>
     <!----FOOTER END-->
 
     <script src="index.js"></script>
