--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
         <div>
             <div class="phone">
                 Appelez maintenant:
-                <span>
-
-                    22367628
-                </span>
+                <span><a href='+21622367628'>22 36 76 28</a></span>
             </div>
             <svg class="menu-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                 viewBox="0 0 16 16">
@@ -45,8 +42,7 @@
                 <div class="phone1">
                     Appelez maintenant:
                     <span>
-
-                        22367628
+                        <a href='+21622367628'>22 36 76 28</a>
                     </span>
                 </div>
             </div>
